Sable Implementation